--- a/app/views/backend/areas/_form.html.haml
+++ b/app/views/backend/areas/_form.html.haml
@@ -1,5 +1,5 @@
 =field_set do
-  =f.association :district
+  =f.referenced_association :district
   =f.input :name
   =f.input :code
   =f.input :country, :collection => countries
