--- a/app/views/backend/custom_fields/show.html.haml
+++ b/app/views/backend/custom_fields/show.html.haml
@@ -4,12 +4,14 @@
     -t.sort @custom_field, {:method=>:post}
   -t.edit @custom_field
 
-=attributes_list(@custom_field) do |l|
-  -l.attribute :name
-  -l.attribute :nature
-  -l.attribute :active
-  -l.attribute :required
+=beehive do |b|
+  -b.cell do
+    =attributes_list(@custom_field) do |l|
+      -l.attribute :name
+      -l.attribute :nature
+      -l.attribute :active
+      -l.attribute :required
 
--if @custom_field.choice?
-  %h2=tg(:choices)
-  =list :choices
+  -if @custom_field.choice?
+    -b.cell(tg(:choices)) do
+      =list :choices
