--- a/app/views/backend/entity_addresses/_form.html.haml
+++ b/app/views/backend/entity_addresses/_form.html.haml
@@ -1,5 +1,5 @@
 =field_set do
-  =f.association :entity
+  =f.referenced_association :entity
   =f.input :by_default
   =f.input :canal, :show => {:mail => :mail_details}, :hide => {:mail => :coordinate}
   =f.input :coordinate
