--- a/app/views/backend/journal_entries/_form.html.haml
+++ b/app/views/backend/journal_entries/_form.html.haml
@@ -1,5 +1,5 @@
 =field_set do
-  =f.association :journal, :readonly => true
+  =f.referenced_association :journal, :readonly => true
   =f.input :number
   =f.input :printed_on
   =render :partial => "exchange_rate_form", :depend_on => [:printed_on, :journal], :refresh_url => new_backend_journal_entry_url
