--- a/app/views/backend/land_parcels/_form.html.haml
+++ b/app/views/backend/land_parcels/_form.html.haml
@@ -4,6 +4,6 @@
   =f.input :description, :field => :text
   -#=f.input :started_on
   =f.input :area_measure
-  -#=f.association :group
-  =f.association :area_unit
+  -#=f.referenced_association :group
+  =f.referenced_association :area_unit
   -# input :shape
