--- a/app/views/backend/mandates/_form.html.haml
+++ b/app/views/backend/mandates/_form.html.haml
@@ -1,5 +1,5 @@
 =field_set do
-  =f.association :entity
+  =f.referenced_association :entity
   =f.input :family, :autocomplete => true
   =f.input :organization, :autocomplete => true
   =f.input :title, :autocomplete => true
