--- a/app/views/backend/observations/_form.html.haml
+++ b/app/views/backend/observations/_form.html.haml
@@ -1,5 +1,5 @@
 =field_set do
-  -#=f.association :entity
+  -#=f.referenced_association :entity
   =f.input :importance
   =f.input :content, :field => :text
 
