--- a/app/views/backend/outgoing_payments/_form.html.haml
+++ b/app/views/backend/outgoing_payments/_form.html.haml
@@ -1,11 +1,11 @@
 =field_set do
-  =f.association :payee
+  =f.referenced_association :payee
   =f.input :amount
   =f.input :to_bank_on
   =f.input :delivered
-  =f.association :mode
+  =f.referenced_association :mode
 
 =field_set(:depositable_options) do
-  =f.association :responsible, :source => :employees
+  =f.referenced_association :responsible, :source => :employees
   =f.input :paid_on
   =f.input :bank_check_number
