--- a/app/views/backend/preferences/_form.html.haml
+++ b/app/views/backend/preferences/_form.html.haml
@@ -8,4 +8,4 @@
   =image_tag(@prescription.picture.url(:thumb))
 
 =field_set(:entity) do
-  =f.association :prescriptor
+  =f.referenced_association :prescriptor
