--- a/app/views/backend/product_process_phases/_form.html.haml
+++ b/app/views/backend/product_process_phases/_form.html.haml
@@ -1,5 +1,5 @@
 =field_set do
-  =f.association :process
+  =f.referenced_association :process
   =f.input :name
   =f.input :position
   =f.input :phase_delay
