--- a/app/views/backend/product_processes/_form.html.haml
+++ b/app/views/backend/product_processes/_form.html.haml
@@ -1,5 +1,5 @@
 =field_set do
-  =f.association :variety
+  =f.referenced_association :variety
   =f.input :name
   =f.input :nature
   =f.input :description
