--- a/app/views/backend/purchase_natures/_form.html.haml
+++ b/app/views/backend/purchase_natures/_form.html.haml
@@ -6,7 +6,7 @@
   =f.input :description, :field => :text
 
 =field_set :accountancy do
-  =f.association :journal, :source => :purchases
+  =f.referenced_association :journal, :source => :purchases
 
 
 
