--- a/app/views/backend/vegetals/_form.html.haml
+++ b/app/views/backend/vegetals/_form.html.haml
@@ -1,6 +1,6 @@
 =field_set do # partie info general de l entité animal
-  =f.association :nature
-  =f.association :variety
+  =f.referenced_association :nature
+  =f.referenced_association :variety
   =f.input :name
   =f.input :reproductor
   =f.input :born_at
