--- a/app/themes/tekyla/stylesheets/screen.css.scss
+++ b/app/themes/tekyla/stylesheets/screen.css.scss
@@ -91,7 +91,7 @@ $fs-huge:      round($fs-ratio*$fs-large);
 $fs-very-huge: round($fs-ratio*$fs-huge);
 
 $neutral-color: #777;
-$base-color: #16D;
+$base-color: #16D; // #7A1; //
 $active-color: $base-color; // #DE7308; // mix(green, $base-color, 50%);
 $link-color:  darken($base-color, 27%);
 $link-color:  darken($base-color, 10%);
