--- a/app/views/backend/incoming_deliveries/_form.html.haml
+++ b/app/views/backend/incoming_deliveries/_form.html.haml
@@ -3,8 +3,8 @@
 
 =field_set do
   -# TODO: Manage variables in :new parameters
-  =f.association :address, :source => :own_mails # , :new => {:entity_id => @purchase.supplier_id}
-  =f.association :mode
+  =f.referenced_association :address, :source => :own_mails # , :new => {:entity_id => @purchase.supplier_id}
+  =f.referenced_association :mode
   =f.input :planned_on
 
 =field_set :incoming_delivery_items do
