--- a/app/views/backend/product_nature_prices/_form.html.haml
+++ b/app/views/backend/product_nature_prices/_form.html.haml
@@ -1,12 +1,12 @@
 =field_set do
-  =f.association :product_nature
+  =f.referenced_association :product_nature
   -# TODO: Cannot keep "if" in forms
   -if @mode != :sales
-    =f.association :supplier, :source => :suppliers
+    =f.referenced_association :supplier, :source => :suppliers
   =f.input :by_default
 
 =field_set :amount do
-  =f.association :category
+  =f.referenced_association :category
   =f.input :pretax_amount
-  =f.association :tax
+  =f.referenced_association :tax
   =f.input :currency, :collection => currencies
