--- a/app/views/backend/product_varieties/_form.html.haml
+++ b/app/views/backend/product_varieties/_form.html.haml
@@ -1,5 +1,5 @@
 =field_set do
-  =f.association :parent
+  =f.referenced_association :parent
   =f.input :name
   =f.input :code
   =f.input :description
