--- a/app/views/backend/purchase_items/_form.html.haml
+++ b/app/views/backend/purchase_items/_form.html.haml
@@ -1,15 +1,15 @@
 -# TODO Form
 =field_set do
-  =f.association :purchase, :field => :hidden
-  =f.association :product, :source => :purchaseables # , :new=>true, "data-parameter-name"=>"product_id", "data-dependents"=>"#price-amount"
+  =f.referenced_association :purchase, :field => :hidden
+  =f.referenced_association :product, :source => :purchaseables # , :new=>true, "data-parameter-name"=>"product_id", "data-dependents"=>"#price-amount"
   =f.input :quantity
   =f.input :annotation
   =f.nested_association :price do
-    =f.association :category
+    =f.referenced_association :category
     =f.input :pretax_amount
-    =f.association :tax
+    =f.referenced_association :tax
     =f.input :currency, :collection => currencies
 
 =field_set :stocks, :depend_on => :product, :if => :stockable? do
-  =f.association :warehouse
+  =f.referenced_association :warehouse
   =f.input :tracking_serial, :if => :trackable?
