--- a/app/views/backend/warehouses/_form.html.haml
+++ b/app/views/backend/warehouses/_form.html.haml
@@ -1,6 +1,6 @@
 =field_set do
   =f.input :name
-  =f.association :parent_place
+  =f.referenced_association :parent_place
   =f.input :description, :field => :text
   =f.input :reservoir, :show => :reservoir_options
 
